# win-certs

./: README.md  main.py  pyproject.toml  read_certs.py  read_win_certs.py  win32_h.py
src/session_aus/: __init__.py  __main__.py  read_win_certs.py  session_aus.py
